# PWA

./: CMakeLists.txt  PWA  build.freebsd  build.linux  build.macosx
cmake/: IncreaseBuild.c
config/LambdaKp/: PWA.cfg
config/npip/: PWA.cfg
config/peta/: PWA.cfg
config/ppi0/: PWA.cfg
data/npip/: G.txt  G_DAPHNE_2005_Ahrens_EJPA26-135.txt  G_DNPL_1980_Bussey_NPB169-403.txt  G_KHARKOV_1984_Belyaev_SJNP40-83.txt  H.txt  H_DNPL_1980_Bussey_NPB169-403.txt  H_KHARKOV_1986_Belyaev_SNJP43-947.txt  P.txt  P_DNPL_1979_Bussey_NPB154-205.txt  P_KHARKOV_1981_Getman_NPB188-397.txt  S.txt  S_DAPHNE_2000_Beck_PRC61-034604.txt  S_DNPL_1979_Bussey_NPB154-205.txt  S_GRAAL_2000_Ajaka_PLB475-372.txt  S_GRAAL_2002_Bartalini_PLB544-113.txt  S_JLAB_2013_Dugger_PRC88-065203.txt  S_KHARKOV_1976_Ganenko_SJNP23-52.txt  S_KHARKOV_1989_Getman_VANT8-3.txt  S_LEGS_2001_Blanpied_PRC64-025203.txt  S_STANFORD_1963_Smith_PR130-2429.txt  T.txt  T_DNPL_1979_Bussey_NPB154-205.txt  T_KHARKOV_1981_Getman_NPB188-397.txt  T_PHOENICS_1996_Dutz_NPA601-319.txt  sg0.txt  sg0_BONN_1972_Fischer_ZP253-38.txt  sg0_CALTECH_1967_Ecklund_PR159-1195.txt  sg0_DAPHNE_2000_Beck_PRC61-034604.txt  sg0_DAPHNE_2004_Ahrens_EPJA21-323.txt  sg0_GLASGOW_1964_Leith_PL8-355.txt  sg0_JLAB_2009_Dugger_PRC79-065206.txt  sg0_MAMI_1999_Branford_PRC61-014603.txt  sg0_ORSAY_1962_Walker_PRL8-37.txt  sg0_ORSAY_1968_Betourne_PR172-1343.txt  sg0_PHOENICS_1994_Buechler_NPA570-580.txt  sg0_SAL_1996_Fisum_PRC53-1278.txt  (+3 more)
doc/: PWA.aux  PWA.dvi  PWA.tex  PWA.tex.backup
macros/: Extract.cpp  Interpolate_sg0.cpp  Observables.cpp  Parse_F_Kashev.cpp  Parse_F_Peter.cpp  Parse_TF_Kashev.cpp  Parse_T_Kashev.cpp  Parse_T_Peter.cpp  Parse_sg0_Prakhov.cpp  Parse_sgE_Preo.cpp  Parse_sgF_Sven.cpp  Parse_sgT_Sven.cpp
src/: Constants.h  Fitter.cpp  Fitter.h  Globals.h  Legendre.h  Multipoles.h  PWA.cpp  PWA.h  Parse_Cx.cpp  Parse_Cx.h  Parse_Cz.cpp  Parse_Cz.h  Parse_E.cpp  Parse_E.h  Parse_F.cpp  Parse_F.h  Parse_G.cpp  Parse_G.h  Parse_H.cpp  Parse_H.h  Parse_MAID.cpp  Parse_MAID.h  Parse_Ox.cpp  Parse_Ox.h  Parse_Oz.cpp  Parse_Oz.h  Parse_P.cpp  Parse_P.h  Parse_S.cpp  Parse_S.h  Parse_T.cpp  Parse_T.h  Parse_sg0.cpp  Parse_sg0.h  Parse_sgCx.cpp  Parse_sgCx.h  Parse_sgCz.cpp  Parse_sgCz.h  Parse_sgE.cpp  Parse_sgE.h  (+80 more)
(+1436 files in other folders)
